# loli

./: CMakeLists.txt  LICENSE  README.md  lolipop.py
docs/: 404.html  CNAME  index.html  sitemap.xml
docs/builtins/: index.html
docs/search/: search_index.json
sdk/: buildin.li  hash.li  math.li  random.li  sys.li  time.li
src/: csiphash.c  loli.c  loli.h  loli_alloc.c  loli_alloc.h  loli_api_value.c  loli_buffer_u16.c  loli_buffer_u16.h  loli_code_iter.c  loli_config.h  loli_core_types.h  loli_emitter.c  loli_emitter.h  loli_expr.c  loli_expr.h  loli_generic_pool.c  loli_generic_pool.h  loli_int_code_iter.h  loli_int_opcode.h  loli_keyword_table.h  loli_lexer.c  loli_lexer.h  loli_library.c  loli_library.h  loli_msgbuf.c  loli_parser.c  loli_parser.h  loli_parser_tok_table.h  loli_pkg_builtin.c  loli_pkg_core.c  loli_pkg_hash.c  loli_pkg_math.c  loli_pkg_random.c  loli_pkg_sys.c  loli_pkg_time.c  loli_raiser.c  loli_raiser.h  loli_string_pile.c  loli_string_pile.h  loli_symtab.c  (+15 more)
